# express-telemetry-desktop

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  ibm-plex-custom.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/grpc_server/: mod.rs  server.rs
src/components/: LogCounter.tsx  ServiceMenu.tsx
